[package]
name = "cryptonote-account"
version = "0.1.4"
authors = ["calidion <calidion@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "account for cryptonote"

[dependencies]
rand = "0.6"
chrono = "0.4"
leb128 = "0.2.1"
tiny-keccak = "1.4.2"
cryptonote-base58 = "0.1.2"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"

[badges]
travis-ci = { repository = "cryptonote-rust/account", branch = "master" }
codecov = { repository = "cryptonote-rust/account", branch = "master", service = "github" }
